# flexitimer

./: CMakeLists.txt  LICENSE  README.md  flexitimer.pro
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  basic_example.c  industrial_device.c  thread_watchdog.c  traffic_light.c  ventilation_system.c
include/: flexitimer.h
src/: flexitimer.c
test/: CMakeLists.txt  flexitimerTest.cpp
